Prueba de liquibase como pipeline

--- a/liquibase/liquibase.properties
+++ b/liquibase/liquibase.properties
@@ -1,5 +1,5 @@
 url=jdbc:postgresql://localhost:5432/test01
 username=andrik
-password=$(PGPASSWORD)
+password=master
 changeLogFile=liquibase/changelog-master.xml
-classpath=liquibase/postgresql-42.7.8.jar
+classpath=postgresql-42.7.8.jar
