fix direccion de base de datos

--- a/liquibase/liquibase.properties
+++ b/liquibase/liquibase.properties
@@ -1,4 +1,4 @@
-url=jdbc:postgresql://localhost:5432/test01
+url=jdbc:postgresql://postgres-db:5432/test01
 username=andrik
 password=master
 changeLogFile=liquibase/changelog-master.xml
